aws-resiliency-yamls/aws-resiliency-namespaces.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.

apiVersion: v1
kind: Namespace
metadata:
  name: nxrm-nexus-27385
---
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-cloudwatch
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-externaldns
---
