aws-resiliency-yamls/aws-resiliency-nxrm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nxrm-deployment-nexus-27385
  namespace: nxrm-nexus-27385
  labels:
    app: nxrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      serviceAccountName: nxrm-nexus-27385-deployment-sa
      containers:
        - name: nxrm-app
          image: sonatype/nexus3:3.37.0
          securityContext:
            runAsUser: 200
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          -Dnexus.datastore.enabled=true -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://${DB_HOST}:3306/${DB_NAME} \
          -Dnexus.datastore.nexus.username=${DB_USER} \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD}"
          volumeMounts:
            - mountPath: /nxrm-secrets
              name: nxrm-secrets
            - name: nexusdata
              mountPath: /nexus-data
            - name: logback-tasklogfile-override
              mountPath: /nexus-data/etc/logback/logback-tasklogfile-appender-override.xml
              subPath: logback-tasklogfile-appender-override.xml
        - name: request-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/request.log']
          volumeMounts:
            - name: nexusdata
              mountPath: /nexus-data
        - name: audit-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/audit/audit.log']
          volumeMounts:
            - name: nexusdata
              mountPath: /nexus-data
        - name: tasks-log
          image: busybox:1.33.1
          args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/tasks/allTasks.log']
          volumeMounts:
            - name: nexusdata
              mountPath: /nexus-data
      volumes:
        - name: nexusdata
          persistentVolumeClaim:
            claimName: ebs-claim
        - name: nxrm-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "nxrm-nexus-27385-nxrm-secret"
              fsType: ext4
        - name: logback-tasklogfile-override
          configMap:
            name: nxrm-logback-tasklogfile-override
            items:
              - key: logback-tasklogfile-appender-override.xml
                path: logback-tasklogfile-appender-override.xml
