aws-resiliency-yamls/aws-resiliency-statefulset.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# The YAML below deploys Nexus Repository.
# Note the following important information:
# 1. replicas is set to 1.
# 2. volumeMounts are specified for the Nexus Repository license, local persistent volume, and logback config map for consolidating task logs into one log file.
# 3. Docker repositories will need additional ports exposed matching your repository connector configuration.
# 4. The deployment YAML includes three busybox sidecar containers which tail the Nexus Repository logs via a local persistent volume and stream them to the worker node  running the nxrm pod where Fluentbit picks them up and send to CloudWatch.
# See Kubernetes documentation at https://kubernetes.io/docs/concepts/cluster-administration/logging/ for more information on the sidecar pattern for accessing logs.
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nxrm-statefulset
  namespace: nxrm
  labels:
    app: nxrm
spec:
  replicas: 1
  serviceName: "nxrm-3-44-0-nxrm-statefulset"
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      serviceAccountName: nexus-repository-statefulset-sa
      terminationGracePeriodSeconds: 20
      containers:
        - name: nxrm-app
          image: sonatype/nexus3:3.44.0
          securityContext:
            runAsUser: 200
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          -Dnexus.datastore.enabled=true -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://${DB_HOST}:3306/${DB_NAME} \
          -Dnexus.datastore.nexus.username=${DB_USER} \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD}"
          volumeMounts:
            - mountPath: /nxrm-secrets
              name: nexus-secret
            - name: nexus-data
              mountPath: /nexus-data
            - name: logback-tasklogfile-override
              mountPath: /nexus-data/etc/logback/logback-tasklogfile-appender-override.xml
              subPath: logback-tasklogfile-appender-override.xml
        - name: request-log
          image: busybox:1.33.1
          args: [ /bin/sh, -c, 'tail -n+1 -F /nexus-data/log/request.log' ]
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
        - name: audit-log
          image: busybox:1.33.1
          args: [ /bin/sh, -c, 'tail -n+1 -F /nexus-data/log/audit/audit.log' ]
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
        - name: tasks-log
          image: busybox:1.33.1
          args: [ /bin/sh, -c, 'tail -n+1 -F /nexus-data/log/tasks/allTasks.log' ]
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: nxrm-nexus-secret
              fsType: ext4
        - name: logback-tasklogfile-override
          configMap:
            name: nxrm-logback-tasklogfile-override
            items:
              - key: logback-tasklogfile-appender-override.xml
                path: logback-tasklogfile-appender-override.xml
  volumeClaimTemplates:
    - metadata:
        name: nexus-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nxrm-nexus-ebs-storage"
        resources:
          requests:
            storage: 20Gi
