aws-resiliency-yamls/aws-resiliency-docker-services.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.
# Ignore this file if you don't use docker repositories
#
apiVersion: v1
kind: Service
metadata:
  name: nxrm-nexus-docker-service
  namespace: nxrm
  labels:
    app: nxrm
spec:
  type:  NodePort
  selector:
    app: nxrm
  ports:
    - name: docker-service
      protocol: TCP
      port: 9090
      targetPort: 8081
