aws-resiliency-yamls/aws-resiliency-ingress-for-docker-connector.yaml
# If you require your clients to access more than one Docker Repository, you must use an external load balancer (e.g., NGINX) as a reverse proxy instead of this ingress for Docker YAML.
# See our documentation at https://help.sonatype.com/repomanager3/nexus-repository-administration/formats/docker-registry/docker-repository-reverse-proxy-strategies

-----

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nxrm
  name: ingress-nxrm-docker
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: <scheme>
    alb.ingress.kubernetes.io/subnets: subnet-abc, subnet-xyz
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nxrm-service-docker
                port:
                  number: 9090
