aws-resiliency-yamls/aws-resiliency-services.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# The services.yaml shown below sets up the Ingress Load Balancer.
# Note that <scheme> should typically be set to internal.

------

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nxrm-nexus-27385
  name: ingress-nxrm-nexus-27385
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: <scheme>
    alb.ingress.kubernetes.io/subnets: <subnet id 1>, <subnet id 2>
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nxrm-service-nexus-27385
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nxrm-service-nexus-27385
  namespace: nxrm-nexus-27385
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
